# bayard-python

./: README.md  pyproject.toml
examples/: http-client.py
src/bayard/: __init__.py  httpclient.py
tests/: test_bayard.py
